--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+ <html>
 
 <head> 
 
@@ -17,7 +17,7 @@
 <body>
   <div class="slide"> 
 
-<img src="bi.jpg" alt="dedicated pics" id="img"> 
+<img src="bi.j" alt="dedicated pics" id="img"> 
 
 
 
@@ -26,29 +26,35 @@
     
   </div>
 <div class="calculator">
-<div class="output"></div>
+<input class="output" id="result" type="text" placeholder="0">
 <div class="controls">   
-<button class="red">c</button> 
-<button class="red">^2</button>
-<button class="red">%</button>
-<button class="red">+</button>
+<button class="red" onclick="clr()">c</button> 
+<button class="red" onclick="del()">Del</button>
 
-<button>7</button>  
-<button>8</button>
-<button>9</button>
-<button class="red">-</button>
-<button>4</button>
-<button>5</button>
-<button>6</button>   
-<button class="red">x</button>
-<button>3</button>
-<button>2</button>
-<button>1</button>
- <button>0</button>
-<button class="red">.</button>
-<button class="red">#</button>
-<button class="red">➗</button>
-<button class="red">=</button>
+<button class="red" onclick="kenny('%')">%</button>
+<button class="red" onclick="kenny('+')">+</button>
+<button onclick="kenny(1)">1</button>
+<button onclick="kenny(2)">2</button>
+<button onclick="kenny(3)">3</button>
+
+
+
+<button class="red" onclick="kenny('-')">-</button>
+<button onclick="kenny(4)">4</button>
+<button onclick="kenny(5)">5</button>
+<button onclick="kenny(6)">6</button>   
+<button class="red" onclick="kenny('*')">x</button>
+ 
+<button onclick="kenny(7)">7</button>  
+<button onclick="kenny(8)">8</button>
+<button onclick="kenny(9)">9</button>
+
+<button class="red" onclick="kenny('.')">.</button>
+<button onclick="kenny(0)">0</button>
+ 
+<button class="red" onclick="kenny('#')">#</button>
+<button class="red" onclick="kenny('➗')">➗</button>
+<button class="red" onclick="calculate()">=</button>
 
 
 </div>
