--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <body>
   <div class="slide"> 
 
-<img src="bi.j" alt="dedicated pics" id="img"> 
-
+KENNY JAVASCRIPT CALCULATOR
+<p>Anticipate for more project</p>
 
 
 
@@ -28,10 +28,11 @@
 <div class="calculator">
 <input class="output" id="result" type="text" placeholder="0">
 <div class="controls">   
-<button class="red" onclick="clr()">c</button> 
-<button class="red" onclick="del()">Del</button>
+<button class="red" onclick="clr()">C</button> 
+<button class="red" onclick="del()">DEL</button>
+<button class="red" onclick="Mathpow()">^2</button>
+<button class="red" onclick="sqrt()">sq.rt</button>
 
-<button class="red" onclick="kenny('%')">%</button>
 <button class="red" onclick="kenny('+')">+</button>
 <button onclick="kenny(1)">1</button>
 <button onclick="kenny(2)">2</button>
@@ -49,14 +50,13 @@
 <button onclick="kenny(8)">8</button>
 <button onclick="kenny(9)">9</button>
 
+
+
+
+<button class="red" onclick="kenny('/')">➗</button>
 <button class="red" onclick="kenny('.')">.</button>
-<button onclick="kenny(0)">0</button>
- 
-<button class="red" onclick="kenny('#')">#</button>
-<button class="red" onclick="kenny('➗')">➗</button>
 <button class="red" onclick="calculate()">=</button>
-
-
+<button onclick="kenny(0)">0</button>
 </div>
 
 
